# CESI-2022-cube

./: .gitignore  projet.xmind
annexe/: Grille d'évaluation CUBES - INFRILAL1 -  V3 - 26.08.2021.xlsx
src/backend/: .gitignore  cli.py  const.py  db.py  main.py  pyproject.toml  settings.py  utils.py
src/backend/migrations/: env.py
src/backend/migrations/versions/: 2a8d4dbfbaff_add_post_s_attachment.py  36908edbe6c9_add_user_disabled_at.py  4dcd7b00de90_add_search_index_on_user.py  639701c846ad_add_posts.py  74007f075d2d_add_disabled_add_to_user.py  9f5a972a21b2_add_user_unicity_on_email.py  a2b3dcf59be9_add_phone_number.py  a785a966dae9_add_birthday.py  a877e1f884be_add_type_on_user.py  ba668f419b41_add_user.py  eaa78eede38e_remove_unique_constraint_on_name.py  efe87f656855_add_credential_updated_at_on_user.py  f501437809d2_add_attachment.py
src/backend/routers/v1/: post.py  reset_password.py  user.py
src/backend/routes/v1/register/: handler_get.py
src/backend/routes/v1/token/: handler_post.py
src/backend/routes/v1/user/: handler_post.py
src/backend/templates/: base.html  reset_password.html  welcome.html
src/frontend/: .env  README.md  package.json  pubspec.yaml  quasar.conf.js  tailwind.config.js
src/frontend/android/app/: build.gradle  google-services.json
src/frontend/ios/Runner.xcodeproj/: project.pbxproj
src/frontend/lib/: main.dart  post_widget.dart  test.dart
src/frontend/src/: App.vue
src/frontend/src-capacitor/: capacitor.config.json  package.json
src/frontend/test/: widget_test.dart
src/frontend/web/: index.html  manifest.json
(+42 files in other folders)
